# covector

.changes/: js-pnpm-catalogs.md  rust-workspace-inherited-version-read.md  rust-workspace-root-deps.md
.github/: dependabot.yml
__fixtures__/pkg.js-pnpm-catalog/: package.json  pnpm-workspace.yaml
__fixtures__/pkg.rust-single-nested/crates/pkg-a/: Cargo.toml
__fixtures__/pkg.rust-workspace-root-deps/: Cargo.toml
__fixtures__/pkg.rust-workspace-root-deps-inherited/: Cargo.toml
__fixtures__/pkg.rust-workspace-root-deps-inherited/pkg-a/: Cargo.toml
__fixtures__/pkg.rust-workspace-root-deps-inherited/pkg-b/: Cargo.toml
__fixtures__/pkg.rust-workspace-root-deps/pkg-a/: Cargo.toml
__fixtures__/pkg.rust-workspace-root-deps/pkg-b/: Cargo.toml
__fixtures__/pkg.rust-workspace-root-deps/pkg-c/: Cargo.toml
__fixtures__/pkg.rust-workspace-root-deps/pkg-d/: Cargo.toml
__fixtures__/pkg.rust-workspace-root-deps/pkg-e/: Cargo.toml
__fixtures__/pkg.rust-workspace-root-deps/pkg-f/: Cargo.toml
