[workspace]
members = ["pkg-a", "pkg-b", "pkg-c", "pkg-d"]

[workspace.dependencies]
serde = "1.0"
rust_root_pkg_a_fixture = { version = "0.5", path = "pkg-a", default-features = false }
rust_root_pkg_b_fixture = "^0.8.0"
rust_root_pkg_c_fixture = { path = "pkg-c", version = "*" }
rust_root_pkg_d_fixture = { path = "pkg-d" }
